test/unit/components/dialogue/scripts/invalid/no-message-many.dscript
Bob angry M
I am angry right now.

Alice angry M
I am also angry right now.

Wyatt silent M

Richard angry M
I am semi-angry right now.

Fanagle happy M
I am anti-angry right now.
